--- a/src/Microsoft.MobileBlazorBindings.WebView.Windows/Microsoft.MobileBlazorBindings.WebView.Windows.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.Windows/Microsoft.MobileBlazorBindings.WebView.Windows.csproj
@@ -11,9 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Web.WebView2" Version="0.9.538" />
-    <PackageReference Include="MtrDev.WebView2.Interop" Version="0.9.430.3" NoWarn="NU1701" />
-    <PackageReference Include="MtrDev.WebView2.Wpf" Version="0.9.430.4" NoWarn="NU1701" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="0.9.538-prerelease" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.7.0.968" NoWarn="NU1701" />
   </ItemGroup>
