Remove all Resource.designer.cs files
They will be auto-generated on each build anyway. And otherwise they can change whenever other dependencies change, which isn't meaningful to track in source control.

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,6 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+# Xamarin auto-generated Android resources
+Resource.designer.cs
