--- a/src/Microsoft.MobileBlazorBindings.WebView.JS/upstream/aspnetcore/web.js/tsconfig.json
+++ b/src/Microsoft.MobileBlazorBindings.WebView.JS/upstream/aspnetcore/web.js/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "downlevelIteration": true,
     "target": "es5",
-    "lib": ["es2015", "dom"],
+    "lib": [ "es2015", "dom", "es2017.object" ],
     "strict": true
   }
 }
