--- a/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
+++ b/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <NoWarn>$(NoWarn);NU1701</NoWarn>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
