--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.iOS/MobileBlazorBindingsXaminals.iOS.csproj
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.iOS/MobileBlazorBindingsXaminals.iOS.csproj
@@ -226,4 +226,9 @@
     <BundleResource Include="Resources\info%402x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadGenericExceptionInfoBarMobileBlazorBindingsXaminalsiOSHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
