--- a/azure-pipelines/publish-deployables.yml
+++ b/azure-pipelines/publish-deployables.yml
@@ -4,11 +4,20 @@ steps:
   artifact: SignedPackages
 
 - task: NuGetCommand@2
-  displayName: Push packages to CI feed
+  displayName: Push packages to Azure DevOps private feed
   inputs:
     command: push
     packagesToPush: $(Pipeline.Workspace)/SignedPackages/*.nupkg
     nuGetFeedType: internal
     publishVstsFeed: $(ci_feed)
     allowPackageConflicts: true
+  condition: and(succeeded(), ne(variables['ci_feed'], ''), ne(variables['Build.Reason'], 'PullRequest'))
+
+- task: NuGetCommand@2
+  displayName: Push packages to GitHub Packages public feed
+  inputs:
+    command: 'push'
+    packagesToPush: $(Pipeline.Workspace)/SignedPackages/*.nupkg
+    nuGetFeedType: 'external'
+    publishFeedCredentials: 'MobileBlazorBindings-MyGet'
   condition: and(succeeded(), ne(variables['ci_feed'], ''), ne(variables['Build.Reason'], 'PullRequest'))
