Publish NuGet packages to public Azure DevOps feed

--- a/azure-pipelines/publish-deployables.yml
+++ b/azure-pipelines/publish-deployables.yml
@@ -14,6 +14,15 @@ steps:
   condition: and(succeeded(), ne(variables['ci_feed'], ''), ne(variables['Build.Reason'], 'PullRequest'))
 
 - task: NuGetCommand@2
+  displayName: Push packages to Azure DevOps public feed
+  inputs:
+    command: 'push'
+    packagesToPush: $(Pipeline.Workspace)/SignedPackages/*.nupkg
+    nuGetFeedType: 'external'
+    publishFeedCredentials: 'MobileBlazorBindings-Packages-nightly'
+  condition: and(succeeded(), ne(variables['ci_feed'], ''), ne(variables['Build.Reason'], 'PullRequest'))
+
+- task: NuGetCommand@2
   displayName: Push packages to MyGet public feed
   inputs:
     command: 'push'
