Add support for gesture recognizers (#166)
Add support for gesture recognizers
* Gestures are components so that they can be placed within a parent component

Fixes #165

--- a/samples/ControlGallery/ControlGallery/ControlGallery.csproj
+++ b/samples/ControlGallery/ControlGallery/ControlGallery.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
