--- a/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld.Android/MobileBlazorBindingsHelloWorld.Android.csproj
+++ b/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld.Android/MobileBlazorBindingsHelloWorld.Android.csproj
@@ -95,4 +95,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionMobileBlazorBindingsHelloWorldAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
