--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.Android/MobileBlazorBindingsXaminals.Android.csproj
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.Android/MobileBlazorBindingsXaminals.Android.csproj
@@ -132,4 +132,9 @@
     <AndroidResource Include="Resources\drawable\xamarinstore.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionMobileBlazorBindingsXaminalsAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
