--- a/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
+++ b/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
@@ -12,8 +12,8 @@
     <PackageReference Include="Microsoft.MobileBlazorBindings.WebView.Windows" Version="MobileBlazorBindingsVersion" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="0.9.538-prerelease" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
-    <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.7.0.968" NoWarn="NU1701" />
+    <PackageReference Include="Xamarin.Forms" Version="XamarinFormsVersion" />
+    <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="XamarinFormsVersion" NoWarn="NU1701" />
   </ItemGroup>
 
   <ItemGroup>
