--- a/templates/BlazorHybrid-app/NewApp.macOS/NewApp.macOS.csproj
+++ b/templates/BlazorHybrid-app/NewApp.macOS/NewApp.macOS.csproj
@@ -94,8 +94,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.MobileBlazorBindings.WebView.macOS" Version="MobileBlazorBindingsVersion" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms" Version="XamarinFormsVersion" />
+    <PackageReference Include="Xamarin.Essentials" Version="XamarinEssentialsVersion" />
     <PackageReference Include="System.Memory" Version="4.5.4" IncludeAssets="None" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
