--- a/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
+++ b/templates/BlazorHybrid-app/NewApp.Windows/NewApp.Windows.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\NewApp\NewApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
