--- a/samples/HybridApp/HybridApp.Windows/HybridApp.Windows.csproj
+++ b/samples/HybridApp/HybridApp.Windows/HybridApp.Windows.csproj
@@ -1,4 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+  <!-- Normally this import would be automatic through the nuget package. We do it manually for projects inside this solution. -->
+  <Import Project="..\..\..\src\Microsoft.MobileBlazorBindings.WebView.Windows\build\Microsoft.MobileBlazorBindings.WebView.Windows.props" />
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -19,4 +21,12 @@
     <ProjectReference Include="..\HybridApp\HybridApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <!-- Normally this import would be automatic through the nuget package. We do it manually for projects inside this solution. -->
+  <Import Project="..\..\..\src\Microsoft.MobileBlazorBindings.WebView.Windows\build\Microsoft.MobileBlazorBindings.WebView.Windows.targets" />
 </Project>
