--- a/samples/HybridApp/HybridApp/HybridApp.csproj
+++ b/samples/HybridApp/HybridApp/HybridApp.csproj
@@ -5,7 +5,7 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <RazorLangVersion>3.0</RazorLangVersion>
     <EnableDefaultCssItems>false</EnableDefaultCssItems>
-    <WwwRootResourcePath>WebUI\wwwroot</WwwRootResourcePath>
+    <WwwRootResourcePath>wwwroot</WwwRootResourcePath>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
 
@@ -15,12 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.5" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="$(WwwRootResourcePath)\**" />
   </ItemGroup>
 
   <ItemGroup>
