--- a/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.iOS/Microsoft.MobileBlazorBindings.WebView.iOS.csproj
@@ -18,6 +18,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="build/**/*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="build/**/*">
+      <Pack>true</Pack>
+      <PackagePath>build</PackagePath>
+      <IncludeInPackage>true</IncludeInPackage>
+      <CopyToOutput>true</CopyToOutput>
+      <BuildAction>Content</BuildAction>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
       <PrivateAssets>all</PrivateAssets>
