Fix elements removal for non-Layout parent (#219)
Fix elements removal for non-Layout parent
- Add new IXamarinFormsContainerElementHandler with AddChild/RemoveChild
- Fix all container controls to implement Add/Remove properly
- Update control gallery sample to add Shell items dynamically

Co-authored-by: Eilon Lipton <Eilon@users.noreply.github.com>

--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.iOS/MobileBlazorBindingsXaminals.iOS.csproj
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals.iOS/MobileBlazorBindingsXaminals.iOS.csproj
@@ -228,7 +228,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadGenericExceptionInfoBarMobileBlazorBindingsXaminalsiOSHideInfoBar="True" />
+      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadGenericExceptionInfoBarMobileBlazorBindingsXaminalsiOSHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
