--- a/src/Microsoft.MobileBlazorBindings.WebView.Windows/Microsoft.MobileBlazorBindings.WebView.Windows.csproj
+++ b/src/Microsoft.MobileBlazorBindings.WebView.Windows/Microsoft.MobileBlazorBindings.WebView.Windows.csproj
@@ -27,10 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.674-prerelease" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.664.37" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
-    <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.8.0.1451" NoWarn="NU1701" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
+    <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.8.0.1687" NoWarn="NU1701" />
     <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" Version="0.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
