Skip signing on PR builds

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -48,3 +48,4 @@ jobs:
     parameters:
       initArgs: -NoRestore
   - template: publish-deployables.yml
+    condition: ne(variables['Build.Reason'], 'PullRequest')
