--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -40,7 +40,7 @@ jobs:
   dependsOn:
   - Windows
   pool: ${{ parameters.windowsPool }}
-  condition: succeededOrFailed()
+  condition: and(succeededOrFailed(), ne(variables['Build.Reason'], 'PullRequest'))
   steps:
   - checkout: self
     clean: true
@@ -48,4 +48,3 @@ jobs:
     parameters:
       initArgs: -NoRestore
   - template: publish-deployables.yml
-    condition: ne(variables['Build.Reason'], 'PullRequest')
